# dashlab

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .gitlab-ci_docs_working.yml  .pre-commit-config.yaml  Caddyfile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt
app/: main.py
app/api/: dashboard.py
app/services/pages/: file_explorer.py  home.py  k3d_displayer.py  wine_demo.py  yt-api-search.py
config/: logging.py  settings.py
docker/: Dockerfile  compose.dev.yml  compose.docs.yml  compose.prod.override_for_dev.yml  compose.prod.yml  compose.splitbox-dev-override.yml  dev.Dockerfile  docs.Dockerfile  precommit.Dockerfile  prod.Dockerfile  prod_with_caddy.Dockerfile
docs/src/: api.rst  conf.py  demo.rst  index.rst  local-setup.rst  usage.rst
docs/src/_autosummary/: app.api.dashboard.rst  app.main.rst  app.rst  config.logging.rst  config.rst  config.settings.rst
scripts/: build-and-serve-docs.sh  build-prod.sh  dev-local-splitbox.sh  dev-start.sh  docker-entrypoint.sh  docker-run-container.sh  docker-run.sh  docs-serve.sh  install-precommit-hooks.sh  precommit-hooks-install.sh  prod-build.sh  prod_test_local.sh  start-dev.sh  tests-run.sh
src/app/api/: dashboard.py
src/app/services/pages/: file_explorer.py  gallery.py  home.py  slides_gallery.py  splitbox_frontend.py
src/app/services/utils/: file_utils.py  ui_utils.py
src/config/: logging.py  settings.py
tests/: test_main.py
tests/api/: test_dashboard.py
tests/services/pages/: test_file_explorer.py
tests/services/utils/: test_file_utils.py  test_ui_utils.py
