[project]
name = "DashLab"
version = "1.0.0"
description = "Dashboard made to call various personnal API and showcase some projects."
authors = [{name = "Pierre Galmiche"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"

dependencies = [
  "plotly==5.13.0",
  "flask",
  "dash==3.1.1",
  "dash-bootstrap-components==1.3.1",
  "pandas",
  "scikit-learn",
  "pymongo",
  "boto3",
  "python-dotenv",
  "gunicorn",
  "flask-session",
  "requests-oauthlib",
  "PyJWT",
  "pydantic",
  "pydantic-settings",
]

[project.optional-dependencies]
dev = [
  "icecream>=2.1.3",
  "sphinx<7.0.0",
  "sphinx-rtd-theme",
  "sphinx-tabs",
]

[build-system]
requires = ["setuptools>=61,<81", "wheel>=0.38"]
build-backend = "setuptools.build_meta"
