[project]
name = "DashLab"
version = "1.0.0"
description = "Dashboard made to call various personnal API and showcase some projects."
authors = [{name = "Pierre Galmiche"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"

dependencies = [
  "plotly==5.13.0",
  "flask",
  "dash==3.1.1",
  "dash-bootstrap-components==1.3.1",
  "pymongo",
  "boto3",
  "gunicorn",
  "flask-session",
  "requests-oauthlib",
  "PyJWT",
  "pydantic",
  "pydantic-settings",
]

[build-system]
requires = ["setuptools>=61,<81", "wheel>=0.38"]
build-backend = "setuptools.build_meta"
